--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/body.css">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/footer.css">
+    <script src="https://kit.fontawesome.com/324b71f187.js" crossorigin="anonymous"></script>
     <title>Dr. Strange</title>
 </head>
 <body>
@@ -49,10 +51,33 @@
                 Assista o Trailer &rightarrow;
             </a>
         </div>
-        <div class="social-container"></div>
+        <div class="social-container">
+            <ul>
+                <li>
+                    <a href="#">
+                        <i class="fa fa-youtube"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="fa fa-twitter"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="fa fa-instagram"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="fa fa-facebook "></i>
+                    </a>
+                </li>
+            </ul>
+        </div>
     </main>
     <footer>
-
+        Copyright 2022 &copy; | Miguel Antonio
     </footer>
 </body>
 </html>
