--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
         <nav>
             <ul class="links-container">
                 <li>
-                    <a href="#" class="home">HOME</a>
+                    <a href="./index.html" class="home">HOME</a>
                 </li>
                 <li>
-                    <a href="#" class="characters">PERSONAGENS</a>
+                    <a href="./pages/personagens.html" class="characters">PERSONAGENS</a>
                 </li>
                 <li>
-                    <a href="#" class="galery">GALERIA</a>
+                    <a href="./pages/galeria.html" class="galery">GALERIA</a>
                 </li>
                 <li>
-                    <a href="#" class="videos">VÍDEOS</a>
+                    <a href="./pages/videos.html" class="videos">VÍDEOS</a>
                 </li>
             </ul>
         </nav>
@@ -39,7 +39,7 @@
     <main>
         <div class="content-container">
             <h1>
-                <span>Doctor</span> STRANGE
+                <span class="doc">Doctor</span>STRANGE
             </h1>
             <span class="movie-title">
                 MULTIVERSE OF MADNESS
