--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="../css/galeria.css">
 </head>
 <body>
-    
+    <header>
+        <a href="https://www.marvel.com/" class="logo">
+            <img src="../ing/logo-marvel.png" alt="Studios Marvel">
+        </a>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
