--- a/pages/personagens.html
+++ b/pages/personagens.html
@@ -6,8 +6,35 @@
     <title>Personagens</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/person.css">
+    <link rel="stylesheet" href="../css/body.css">
 </head>
 <body>
-    
+    <header>
+        <a href="https://www.marvel.com/" class="logo">
+            <img src="../ing/logo-marvel.png" alt="Studios Marvel">
+        </a>
+        <nav>
+            <ul class="links-container">
+                <li>
+                    <a href="../index.html" class="home">HOME</a>
+                </li>
+                <li>
+                    <a href="./personagens.html" class="characters">PERSONAGENS</a>
+                </li>
+                <li>
+                    <a href="./galeria.html" class="galery">GALERIA</a>
+                </li>
+                <li>
+                    <a href="./videos.html" class="videos">VÍDEOS</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+       
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
