--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -6,14 +6,33 @@
     <title>Galeria</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/galeria.css">
+    <link rel="stylesheet" href="../css/body-gale.css">
 </head>
 <body>
     <header>
         <a href="https://www.marvel.com/" class="logo">
             <img src="../ing/logo-marvel.png" alt="Studios Marvel">
         </a>
+        <nav>
+            <ul class="links-container">
+                <li>
+                    <a href="../index.html" class="home">HOME</a>
+                </li>
+                <li>
+                    <a href="./personagens.html" class="characters">PERSONAGENS</a>
+                </li>
+                <li>
+                    <a href="./galeria.html" class="galery">GALERIA</a>
+                </li>
+                <li>
+                    <a href="./videos.html" class="videos">VÍDEOS</a>
+                </li>
+            </ul>
+        </nav>
     </header>
-    <main></main>
+    <main>
+        <h1>GALERIA</h1>
+    </main>
     <footer></footer>
 </body>
 </html>
