--- a/pages/personagens.html
+++ b/pages/personagens.html
@@ -6,7 +6,7 @@
     <title>Personagens</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/person.css">
-    <link rel="stylesheet" href="../css/body.css">
+    <link rel="stylesheet" href="../css/body-pers.css">
 </head>
 <body>
     <header>
@@ -31,10 +31,50 @@
         </nav>
     </header>
     <main>
-       
+       <h1 class="title-container">ELENCO PRINCIPAL</h1>
+       <p class="desc">O filme “Doctor Strange: Multiverse of Madness” traz consigo um elenco com personagens interpretados por atores já conhecidos na grande saga de filmes da Marvel, como:</p>
+       <nav>
+           <ul class="personagens-container">
+               <li>
+                   <div class="pers-container">
+                       <img src="../ing/strange.png" alt="#">
+                       <p class="benecum">Benedict Cumberbatch</p>
+                       <p class="pers">Doctor Strange</p>
+                   </div>
+               </li>
+               <li>
+                   <div class="pers-container">
+                       <img src="../ing/wanda.png" alt="#">
+                       <p class="eliols">Elizabeth Olsen</p>
+                       <p class="pers">Wanda Maximoff</p>
+                   </div>
+               </li>
+               <li>
+                   <div class="pers-container">
+                       <img src="../ing/xavier.png" alt="#">
+                       <p class="patste">Patrick Stewart</p>
+                       <p class="pers">Professor Xavier</p>
+                   </div>
+               </li>
+               <li>
+                   <div class="pers-container">
+                        <img src="../ing/wong.png" alt="#">
+                        <p class="benewon">Benedict Wong</p>
+                        <p class="pers">Wong</p>
+                   </div>
+               </li>
+               <li>
+                   <div class="pers-container">
+                       <img src="../ing/mordo.png" alt="#">
+                       <p class="chieli">Chiwetel Eliofor</p>
+                       <p class="pers">Barão Mordo</p>
+                   </div>
+               </li>
+           </ul>
+       </nav>
     </main>
     <footer>
-
+        Copyright 2022 &copy; | Miguel Antonio
     </footer>
 </body>
 </html>
